--- a/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
@@ -10,4 +10,26 @@ To break it down simply:
 
 <img width="512" height="319" alt="AAAA" src="https://github.com/user-attachments/assets/e3316343-ee2e-4a6d-aad9-7ebcbc17b090" />
 
-:link: 
+:link: Refer also to [1.2.1](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
+
+The first step in IAM processes starts by creating user identities and giving them credentials (passwords, badges, PIN numbers, mobile phones, etc.). When users need access, they must present these credentials to be checked. Over time, these credentials need to be reviewed and updated, and eventually, they’re retired when no longer needed. This process is called **provisioning** (creating access) and **deprovisioning** (removing access), and it's part of the overall credentials lifecycle management.
+
+For example:
+- **Provisioning:** When a new employee joins the company, you create her/his account and give him/her access to the systems she/he need.
+- **Deprovisioning:** When the employee leaves, you deactivate her/his account to remove access and prevent unauthorized use.
+
+This cycle keeps the organization secure by making sure only the right people or systems can access important information, and only for as long as they need it.
+
+:bulb: **Deprovisioning vs Decommissioning.**
+Deprovisioning involves revoking access rights and permissions from users or systems that no longer require them. This process ensures that former employees, contractors, or systems do not retain access to sensitive resources, thereby maintaining security and compliance.
+Decommissioning, on the other hand, is the process of retiring and removing assets, such as hardware or software, from active service. This includes tasks like securely erasing data, uninstalling applications, and disposing of equipment. Decommissioning is a final step, indicating that the asset is no longer in use and has been permanently retired.
+
+**Access management** means making sure users can only access the things they need, exactly when and where they need them—nothing more
+
+**Identity and Access Management (IAM)** plays a key role in almost every part of an organization’s security. As a security professional, it’s important to make sure the right processes and technology are in place to manage access securely. This means, in other words:
+1. Understanding what identity information is needed (like usernames and passwords).
+2. Selecting and setting up systems that handle this information properly.
+3. Using administrative controls (like regular access reviews) to support the technology and ensure everything stays secure.
+
+As many other aspects of Information Security, Access management requires a balance between security and usability. If security is too strict, it can make it difficult for users to access the systems they need. On the other hand, if security is too relaxed, it puts your system’s Confidentiality, Integrity, and Availability at risk. Finding the right balance ensures that users can work efficiently without compromising security.
+
