--- a/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
@@ -10,7 +10,7 @@ To break it down simply:
 
 <img width="512" height="319" alt="AAAA" src="https://github.com/user-attachments/assets/e3316343-ee2e-4a6d-aad9-7ebcbc17b090" />
 
-:link: Refer also to [1.2.1](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
+:link: Refer also to [1.2.1 Confidentiality, integrity, and availability, authenticity, and nonrepudiation (5 Pillars of Information Security)](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.02%20Understand%20and%20apply%20security%20concepts.md#121-confidentiality-integrity-and-availability-authenticity-and-nonrepudiation-5-pillars-of-information-security)
 
 The first step in IAM processes starts by creating user identities and giving them credentials (passwords, badges, PIN numbers, mobile phones, etc.). When users need access, they must present these credentials to be checked. Over time, these credentials need to be reviewed and updated, and eventually, they’re retired when no longer needed. This process is called **provisioning** (creating access) and **deprovisioning** (removing access), and it's part of the overall credentials lifecycle management.
 
