--- a/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
@@ -33,3 +33,66 @@ Decommissioning, on the other hand, is the process of retiring and removing asse
 
 As many other aspects of Information Security, Access management requires a balance between security and usability. If security is too strict, it can make it difficult for users to access the systems they need. On the other hand, if security is too relaxed, it puts your system’s Confidentiality, Integrity, and Availability at risk. Finding the right balance ensures that users can work efficiently without compromising security.
 
+### Open Questions ###
+
+1. What is the primary purpose of Identity and Access Management (IAM)?
+<details>
+  <summary>Show answer</summary>
+IAM is designed to control who can access company assets and resources, ensuring that only authorized individuals or systems can interact with sensitive information. This helps protect the organization's Confidentiality, Integrity, and Availability by verifying identities and granting permissions.
+</details>
+
+2. What are the four main areas of IAM, and what do they involve?
+<details>
+  <summary>Show answer</summary>
+The four main areas of IAM are Identification, Authentication, Authorization, and Accountability (IAAA). Identification determines who is requesting access, Authentication verifies their identity, Authorization defines what they can do once authenticated, and Accountability tracks and logs their actions for auditing purposes.
+</details>
+
+3. What happens during the Identification process in IAM?
+<details>
+  <summary>Show answer</summary>
+During Identification, the system needs to figure out who or what is trying to access the system, such as when a user logs into their computer or when an automated system requests access to a resource. It's the first step to determining if the access request is legitimate.
+</details>
+
+4. How does Authentication contribute to the IAM process?
+<details>
+  <summary>Show answer</summary>
+Authentication ensures that the entity requesting access is indeed who they claim to be. This typically involves verifying credentials such as passwords, biometrics, or other authentication factors like smart cards or one-time passcodes.
+</details>
+
+5. What role does Authorization play in IAM, and how is it determined?
+<details>
+  <summary>Show answer</summary>
+Authorization occurs after authentication and determines what the authenticated user or system is allowed to do within the environment. This could involve deciding which files, applications, or resources the entity can access and what actions they can perform.
+</details>
+
+6. What is Accountability in IAM, and why is it important?
+<details>
+  <summary>Show answer</summary>
+Accountability refers to tracking and recording user activities within the system. This is crucial for auditing purposes, ensuring that any actions taken by users or systems can be traced and verified, helping detect potential security breaches or unauthorized access.
+</details>
+
+7. What is the difference between Provisioning and Deprovisioning in IAM?
+<details>
+  <summary>Show answer</summary>
+Provisioning refers to the process of creating user identities and assigning necessary access permissions when they join the organization, while Deprovisioning involves removing access and disabling accounts when users leave the organization or no longer need access.
+</details>
+
+8. How does Decommissioning differ from Deprovisioning?
+<details>
+  <summary>Show answer</summary>
+Decommissioning involves permanently retiring and removing assets, like hardware or software, from active use, including securely erasing data and disposing of equipment. Deprovisioning, on the other hand, focuses on revoking access rights without necessarily removing the asset itself.
+</details>
+
+9. Why is it important to find a balance between security and usability in IAM?
+<details>
+  <summary>Show answer</summary>
+A balance between security and usability is crucial to ensure that users can access the systems they need to perform their jobs effectively while maintaining the integrity and confidentiality of the organization's information. Too strict security can hinder productivity, while too lenient security poses risks to the system.
+</details>
+
+10. What are some administrative controls that support IAM and maintain security?
+<details>
+  <summary>Show answer</summary>
+Administrative controls in IAM include actions like regular access reviews, where user permissions are periodically evaluated to ensure they still align with their roles. These controls help maintain security by ensuring that only the necessary access is granted and that outdated or unnecessary permissions are removed.
+</details>
+
+---
