Update 5.1 Control Physical and logical access to assets.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
@@ -134,5 +134,44 @@ The term "system" can be challenging to define, as it generally refers to a comb
 
 Systems may have various security requirements, including the need to ensure confidentiality, availability, and integrity of critical information, as well as the availability of the system itself and the authenticity and nonrepudiation of its users. Implementing proper access controls is crucial to maintaining the security and privacy of data. These controls support fundamental security principles such as Confidentiality, Integrity, Availability, and Nonrepudiation (CIANA) already mentioned.
 
+## 5.1.3 Devices ##
 
----
+In access control models, devices can be both objects and subjects. Devices that contain sensitive data or provide access to critical functions require controlled access as objects. They can also act as subjects or non-human users; device identifiers like fingerprints, digital certificates, or cookies can be used to authenticate devices. If a new or untrusted device attempts to access sensitive information, the access control system should enforce additional authentication measures, such as MFA, before granting access. 
+
+Devices are integral components of information systems and, as such, require effective identity and access management (IAM). User workstations such as laptops, desktops, and tablets function as complete information systems with capabilities for storage, processing, and networking, necessitating stringent security measures like restricted logical access. The rise of cloud computing has further expanded the range of devices an organization must manage, as these services can be accessed from any internet-connected device.
+
+A key aspect of device IAM is ensuring that only authorized users can access these devices. 
+
+:bulb: The proliferation of new device types has introduced IAM challenges, such as early smartphones that only supported simple four-digit PINs rather than more complex passwords. However, advancements in technology have brought benefits, including the widespread availability of biometric sensors like fingerprint readers and facial recognition scanners. These technologies, now more affordable and effective, enhance multi factor authentication (MFA) options.
+
+Effective IAM for devices also involves robust endpoint security. Practices like endpoint detection and response (EDR) are crucial for monitoring and managing device security. Access controls should be applied to ensure device security. For instance, an asset inventory in a mobile device management (MDM) system should track the owner or custodian of each device, aiding incident response if a device is compromised.
+
+The portability of modern devices, such as laptops, tablets, and smartphones, presents a challenge to confidentiality. These devices are small and lightweight, making them susceptible to theft, loss, or unauthorized access if left unattended. Tools like MDM can mitigate these risks with features such as:
+
+- **Device Protection:** Enforces security policies like password complexity, software updates, and app restrictions. EDR software can detect suspicious activity and take protective actions like quarantining, locking, or wiping the device.
+- **Device Restrictions:** Identifies unsupported hardware or jailbroken systems that bypass standard restrictions. Jailbreaking can compromise device security by removing manufacturer protections.
+- **Remote Lock or Wipe:** Allows organizations to lock or erase data from a device if it is stolen or lost. Remote lock can be reversed if the device is recovered, while remote wipe deletes data or renders the device unusable, typically used when recovery is unlikely.
+- **Containerization:** Isolates organizational data within a logical container on a personal device, limiting access by other apps. This approach is useful for bring-your-own-device (BYOD) policies, where restrictions are applied to the container rather than the entire device. The container can be locked or wiped if necessary.
+
+Physical access controls also play a crucial role in device security. In an office setting, physical controls protect all devices within the facility. However, portable devices that leave the secure environment pose a challenge. Users must be trained to secure devices appropriately, such as avoiding leaving them unattended in public or securing them in an unmarked bag or hotel safe during travel.
+
+## 5.1.4 Facilities ##
+
+Facilities offer essential security for all the systems, devices, and information they house, making robust protection crucial. Physical security is a key aspect of information system security—if an attacker gains physical access to a device, even the most sophisticated logical security measures may fail to prevent unauthorized data access.
+
+Traditional physical security practices for facilities typically employ a secure perimeter approach, using many layers of defense to enhance security progressively. They are usually a combination of surveillance, detection, and authentication systems to prevent unauthorized entry. Surveillance systems like CCTV cameras provide real-time monitoring and recording of entry points, ensuring visual oversight and deterrence. Intrusion Detection Systems (IDS), such as motion sensors, infrared detectors, and alarm systems, detect unauthorized movement and trigger alerts to security personnel or automated response mechanisms. Physical access control systems (PACS), including RFID badges, biometric scanners, and smart card readers, authenticate individuals and enforce entry restrictions based on predefined access policies. These systems often integrate with security management platforms to provide centralized monitoring, logging, and real-time response to security incidents.
+
+## 5.1.5 Applications ##
+
+Applications often serve as gateways to an organization’s data, making it crucial to control access to these applications to protect sensitive information. Here are three key points explaining why we should protect Applications of our company:
+
+**Data Protection:** Applications frequently handle and process sensitive or critical data. By controlling access to these applications, an organization can prevent unauthorized users from accessing, manipulating, or leaking this data.
+
+**Regulatory Compliance:** Many industries are subject to regulations that require strict data protection measures. Controlling access to applications helps organizations comply with these regulations by ensuring that only authorized personnel can access sensitive information.
+
+**Minimizing Risks:** Applications can be vulnerable to various types of cyber threats, including unauthorized access, data breaches, and malicious attacks. Proper access control mitigates these risks by limiting exposure to only those individuals who need access for their roles.
+
+## 5.1.6 Services ##
+
+Services refer to the various functions or processes provided by an information system, network, or application to support the needs of users or other systems. These services can range from basic functions like file storage and retrieval to more complex ones like data processing, authentication, email delivery, and cloud-based operations. Controlling access to these services is critical to ensuring that only authorized users or systems can use them, safeguarding the organization’s data and infrastructure.
+
