Update 5.1 Control Physical and logical access to assets.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
@@ -175,3 +175,34 @@ Applications often serve as gateways to an organization’s data, making it cruc
 
 Services refer to the various functions or processes provided by an information system, network, or application to support the needs of users or other systems. These services can range from basic functions like file storage and retrieval to more complex ones like data processing, authentication, email delivery, and cloud-based operations. Controlling access to these services is critical to ensuring that only authorized users or systems can use them, safeguarding the organization’s data and infrastructure.
 
+### Open Questions ###
+
+1. Why is access control considered a cornerstone of information security?
+<details> <summary>Show answer</summary> Access control ensures that only authorized individuals or systems can interact with sensitive assets. Without it, confidentiality, integrity, and availability (CIA) of information could be compromised, leading to breaches, fraud, or service disruptions. </details>
+
+2. How does the need-to-know principle differ from the least privilege principle?
+<details> <summary>Show answer</summary> Need-to-know restricts access based on whether a user requires the information to perform their job. Least privilege goes further by ensuring that users have only the minimal rights necessary (e.g., read-only instead of read/write). Together, they minimize unnecessary exposure and limit potential damage. </details>
+
+3. What risks are reduced by applying separation of duties in access control?
+<details> <summary>Show answer</summary> Separation of duties reduces risks of fraud, misuse of power, and human error by ensuring that no single individual can perform a critical task alone. For example, one employee approves financial transactions, while another executes them. </details>
+
+4. How do physical access controls and logical access controls complement each other?
+<details> <summary>Show answer</summary> Physical controls protect facilities and hardware (e.g., locks, biometrics, CCTV), while logical controls safeguard data and systems (e.g., authentication, ACLs, encryption). Both are needed: a server room lock prevents intruders, while logical access prevents hackers from bypassing the lock digitally. </details>
+
+5. Why is the CIA triad relevant to access control?
+<details> <summary>Show answer</summary> Access control enforces **confidentiality** (restricting who can see data), **integrity** (ensuring only authorized changes occur), and **availability** (ensuring access is granted when needed). Without balanced access control, one or more elements of the triad may be compromised. </details>
+
+6. How do Windows and Unix/Linux systems implement access control differently?
+<details> <summary>Show answer</summary> Windows uses Access Control Lists (ACLs) for granular user/group permissions. Unix/Linux uses the owner-group-other model with Read/Write/Execute rights, represented numerically (e.g., 755). Unix/Linux also leverages `sudo` for temporary privilege elevation. </details>
+
+7. Why is device identity management important in modern access control?
+<details> <summary>Show answer</summary> Devices often act as both subjects (initiating actions) and objects (storing data). With BYOD and cloud access, IAM must verify device identity through certificates, fingerprints, or MDM policies to ensure only trusted devices access sensitive resources. </details>
+
+8. What role does multi-factor authentication (MFA) play in logical access control?
+<details> <summary>Show answer</summary> MFA strengthens access control by requiring multiple forms of verification (e.g., password + fingerprint). This makes unauthorized access far harder, especially when passwords are compromised through phishing or brute-force attacks. </details>
+
+9. What are the main differences between centralized, decentralized, and hybrid IAM?
+<details> <summary>Show answer</summary> - **Centralized IAM**: Single authority manages all access (high consistency, single point of failure). - **Decentralized IAM**: System owners manage access locally (flexible, but inconsistent). - **Hybrid IAM**: Combines both, balancing oversight with flexibility. </details>
+
+10. How do access controls protect applications and services in an organization?
+<details> <summary>Show answer</summary> Applications and services often handle sensitive data (e.g., HR systems, email, cloud storage). Access controls prevent unauthorized users from exploiting vulnerabilities, help meet compliance requirements, and reduce risks of breaches or service abuse. </details>
